package Bingo.Patterns.Behavioral;

public interface Observer {
    /**
     * Método para actualizar el estado del objeto.
     * @param ball Número llamado.
     */
    void update(int ball);
}
